# textstat

./: .codespellignorelines  .gitignore  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.zh.md  easy_word_list  local_test_workflow.py  pyproject.toml  requirements.txt  script.py  setup.py  test.py  test.txt  try.py
.github/workflows/: test.yml  textstat.yml  textstat_core.yml
.lang-template/: cookiecutter.json
.lang-template/textstat-{{ cookiecutter.language }}/: pyproject.toml
.lang-template/textstat-{{ cookiecutter.language }}/textstat_{{ cookiecutter.language }}/: __init__.py  sentence.py  word_collection.py
.lang-template/textstat.{{ cookiecutter.language }}/: pyproject.toml
docs/: changelog.rst  conf.py  index.md  index.rst  installation.md  installation.rst
docs/_templates/: contribute.html
tests/: conftest.py  test.py  test_filtering.py  test_sentences.py  test_statistics.py  test_stats.py  test_text.py  test_textstat.py  test_word.py
tests/backend/: resources.py  test_counts.py  test_metrics.py  test_selections.py  test_transformations.py  test_utils.py  test_validations.py
tests/backend/counts/: test_count_arabic_long_words.py  test_count_arabic_syllables.py  test_count_chars.py  test_count_complex_arabic_words.py  test_count_difficult_words.py  test_count_faseeh.py  test_count_letters.py  test_count_long_words.py  test_count_miniwords.py  test_count_monosyllable_words.py  test_count_polysyllable_words.py  test_count_sentences.py  test_count_syllables.py  test_count_words.py
tests/backend/metrics/: test_automated_readability_index.py  test_chars_per_word.py  test_coleman_liau_index.py  test_crawford.py  test_dale_chall_readability_score.py  test_dale_chall_readability_score_v2.py  test_fernandez_huerta.py  test_flesch_kincaid_grade.py  test_flesch_reading_ease.py  test_gulpease_index.py  test_gunning_fog.py  test_gutierrez_polini.py  test_letters_per_word.py  test_linsear_write_formula.py  test_lix.py  test_osman.py  test_reading_time.py  test_rix.py  test_sentences_per_word.py  test_smog_index.py  test_spache_readability.py  test_syllables_per_word.py  test_szigriszt_pazos.py  test_text_standard.py  test_wiener_sachtextformel.py  test_words_per_sentence.py
tests/backend/selections/: test_list_difficult_words.py  test_list_words.py  test_set_difficult_words.py
tests/backend/transformations/: test_remove_punctuation.py
tests/backend/utils/: test_get_cmudict.py  test_get_grade_suffix.py  test_get_lang_cfg.py  test_get_lang_easy_words.py  test_get_lang_root.py  test_get_pyphen.py  test_get_typed_cache.py
tests/backend/validations/: test_is_difficult_word.py
tests/test_citation/: __init__.py  test_decorator.py  test_formatters.py  test_integration.py  test_metadata.py  test_registry.py
tests/test_en/: test_en_filtering.py  test_en_word.py  test_formulas.py
tests/texts/: fairy_tales.toml  moby_dick.toml  war_of_the_worlds.toml
tests/textstat/: test_legacy_round.py  test_set_lang.py  test_set_rm_apostrophe.py  test_text_standard.py
textstat/: __init__.py  _filterable.py  _filtering.py  cli.py  easy_words.txt  filtering.py  properties.py  sentence.py  stats.py  text.py  textstat.py  word.py  word_collection.py  word_forms.py
textstat-en/: pyproject.toml
textstat-en/textstat_en/: __init__.py  sentence.py  text.py  word.py  word_collection.py
textstat.en/: pyproject.toml
textstat.en/textstat/en/: sentence.py  text.py  word_collection.py
textstat/backend/: __init__.py  counts.py  metrics.py  selections.py  transformations.py  utils.py  validations.py
textstat/backend/counts/: __init__.py  _count_arabic_long_words.py  _count_arabic_syllables.py  _count_chars.py  _count_complex_arabic_words.py  _count_difficult_words.py  _count_faseeh.py  _count_letters.py  _count_long_words.py  _count_miniwords.py  _count_monosyllable_words.py  _count_polysyllable_words.py  _count_sentences.py  _count_syllables.py  _count_words.py  count_arabic_long_words.py  count_arabic_syllables.py  count_chars.py  count_complex_arabic_words.py  count_difficult_words.py  count_faseeh.py  count_letters.py  count_long_words.py  count_miniwords.py  count_monosyllable_words.py  count_polysyllable_words.py  count_sentences.py  count_syllables.py  count_words.py
textstat/backend/metrics/: __init__.py  _automated_readability_index.py  _avg_sentence_length.py  _chars_per_word.py  _coleman_liau_index.py  _crawford.py  _dale_chall_readability_score.py  _dale_chall_readability_score_v2.py  _fernandez_huerta.py  _flesch_kincaid_grade.py  _flesch_reading_ease.py  _gulpease_index.py  _gunning_fog.py  _gutierrez_polini.py  _letters_per_word.py  _linsear_write_formula.py  _lix.py  _mcalpine_eflaw.py  _osman.py  _reading_time.py  _rix.py  _sentences_per_word.py  _smog_index.py  _spache_readability.py  _syllables_per_word.py  _szigriszt_pazos.py  _text_standard.py  _wiener_sachtextformel.py  _words_per_sentence.py  automated_readability_index.py  avg_sentence_length.py  chars_per_word.py  coleman_liau_index.py  crawford.py  dale_chall_readability_score.py  dale_chall_readability_score_v2.py  fernandez_huerta.py  flesch_kincaid_grade.py  flesch_reading_ease.py  gulpease_index.py  (+17 more)
textstat/backend/selections/: __init__.py  _list_difficult_words.py  _list_words.py  _set_difficult_words.py  list_difficult_words.py
textstat/backend/transformations/: __init__.py  _remove_punctuation.py  remove_punctuation.py
textstat/backend/utils/: __init__.py  _get_cmudict.py  _get_lang_cfg.py  (+12 more)
textstat/citation/: __init__.py  decorator.py  metadata.py
textstat/core/: __init__.py  sentence.py  span.py  stats.py  text.py  word.py  word_collection.py
textstat/en/: __init__.py  sentence.py  span.py  text.py  word.py  word_collection.py
textstat/stubs/: README.md  __init__.py
textstat_core/: sentence.py  statistics.py  stats.py  text.py  word.py  word_collection.py
(+27 files in other folders)
