[project]
name = "textstat"
version = "1.0.0-alpha.1"
description = "Textstat is an easy to use Python library that analyzes text to provide detailed statistics, readability scores, and complexity metrics. Perfect for content analysis, education, and natural language processing."
authors = [{ name = "Alex Ward", email = "alxwrd@googlemail.com" }]
requires-python = ">=3.9.0,<4.0.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "syllables>=1.0.9,<2",
]

[project.optional-dependencies]
cmudict = [
    "cmudict>=1.0.32,<2",
]

[project.urls]
Homepage = "https://textstat.org/"
Repository = "https://github.com/textstat/textstat/"
Documentation = "https://docs.textstat.org/"

[project.scripts]
textstat = "textstat.cli:run"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0",
    "grip>=4.6.0,<5",
    "poethepoet>=0.34.0,<0.35",
    "toml>=0.10.2,<0.11",
    "pytest-cov>=6.1.1,<7",
    "cookiecutter>=2.1.1,<3",
    "ruff>=0.11.9",
    "pytest-watch>=4.2.0",
    ]

[tool.hatch.build.targets.sdist]
include = ["textstat"]

[tool.hatch.build.targets.wheel]
include = ["textstat"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
lint = "ruff check"
test = "pytest --cov=. --cov-report html:tests/coverage_report"
check.sequence = ["lint", "test"]
check.ignore_fail = "return_non_zero"
ruff = "ruff format"
isort = "ruff check --select I --fix ."
format = ["ruff", "isort"]
precommit = ["format", "check"]
build = "uv build"
_publish = "uv publish"
release = ["build", "_publish"]

[tool.coverage.run]
omit = [
    "tests/*",
    ".venv/*",
    ]
