[project]
name = "textstat"
version = "1.0.0-alpha.1"
description = "Textstat is an easy to use Python library that analyzes text to provide detailed statistics, readability scores, and complexity metrics. Perfect for content analysis, education, and natural language processing."
authors = [{ name = "Alex Ward", email = "alxwrd@googlemail.com" }]
requires-python = ">=3.10.0,<4.0.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "syllables>=1.0.9,<2",
]

[project.optional-dependencies]
cmudict = [
    "cmudict>=1.0.32,<2",
]

[project.urls]
Homepage = "https://textstat.org/"
Repository = "https://github.com/textstat/textstat/"
Documentation = "https://docs.textstat.org/"

[project.scripts]
textstat = "textstat.cli:run"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0",
    "grip>=4.6.0,<5",
    "poethepoet>=0.34.0,<0.35",
    "toml>=0.10.2,<0.11",
    "pytest-cov>=6.1.1,<7",
    "cookiecutter>=2.1.1,<3",
    "ruff>=0.11.9",
    "pytest-watch>=4.2.0",
    ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["textstat"]

[tool.hatch.build.targets.wheel]
include = ["textstat"]

[tool.poe.tasks]
lint = "ruff check"
test = "pytest --cov=. --cov-report html:tests/coverage_report"
check.sequence = ["lint", "test"]
check.ignore_fail = "return_non_zero"
ruff = "ruff format"
isort = "ruff check --select I --fix ."
format = ["ruff", "isort"]
precommit = ["format", "check"]
all.ref = "precommit"
build = "uv build"
_publish = "uv publish"
release = ["build", "_publish"]
cov-report = "uv run python -m http.server -d tests/coverage_report -b 127.0.0.1"

[tool.coverage.run]
omit = [
    "tests/*",
    ".venv/*",
    ]
