[tool.poetry]
name = "textstat-{{ cookiecutter.language }}"
version = "{{ cookiecutter.textstat_version }}"
description = ""
authors = ["Alex Ward <alxwrd@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
textstat = {version = "{{ cookiecutter.textstat_version }}"}

[tool.poetry.dev-dependencies]
textstat = {path = "../", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
